[package]
name = "darkpool"
version = "0.1.0"
description = "Private DEX using MagicBlock PER"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "darkpool"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]

[dependencies]
anchor-lang = "0.32.1"


